--- a/frontend/src/components/NoteDetail/NoteDetail.module.css
+++ b/frontend/src/components/NoteDetail/NoteDetail.module.css
@@ -1,5 +1,5 @@
 .noteDetail {
-  padding: 16px;
+  padding: 0 8px;
   background: #fff;
   height: 92vh !important;
 
@@ -17,7 +17,8 @@
     background-color: var(--blue-500);
     color: white;
     height: 40px;
-    width: 100%;
+
+    padding: 0 30px;
     font-size: var(--font-size-4);
 
     font-weight: 500;
@@ -27,7 +28,7 @@
   .cancelButton {
     background-color: var(--gray-300);
     height: 40px;
-    width: 100%;
+    padding: 0 30px;
     font-size: var(--font-size-4);
     font-family: var(--font-inter);
   }
