--- a/frontend/src/pages/Notes/Notes.module.css
+++ b/frontend/src/pages/Notes/Notes.module.css
@@ -23,7 +23,7 @@
 }
 
 .noteDetail {
-  padding: 24px;
+  padding: 0 24px !important;
   background-color: white;
   border-right: 1px solid var(--neutral-200);
 }
